# ovir

./: .gitignore  AGENTS.md  README.md  cobweb_retriever.pkl  concept.md  docker-compose.yml  index.html  ovir_runtime_simulation_revised.html  pivot.md  pyproject.toml  research_plan.md  simulator.html
cobweb-playground/: 01_basics.py  02_ovir_routing.py  NOTES.md  cobweb_retriever.pkl  pyproject.toml
data/: cfpb_corpus.jsonl
docs/: opportunities_and_risks.md  ovir_brainstorm_synthesis.md
docs/dspy-kg-pipeline/: meta-prompt.md
docs/knowledge-graphs/: 01-overview-peng2023.md  02-history-chaudhri2022.md  03-canonical-hogan2021.md  04-embeddings-ji2021.md  README.md
dspy-playground/: 01_signatures.py  02_modules.py  03_optimizer.py  NOTES.md  compiled_router.json  pyproject.toml
falkordb-playground/: 01_basics.py  02_traversal.py  03_ovir_pattern.py  04_index_and_performance.py  NOTES.md  docker-compose.yml  pyproject.toml  requirements.txt
gensyn-playground/: 01_run_and_receipt.py  02_receipt_analysis.py  NOTES.md  pyproject.toml
gliner-playground/: 01_basics.py  02_batch_corpus.py  NOTES.md  annotated_corpus.jsonl  entity_registry.json  pyproject.toml
kg-linkedin-research/: PLAN.md  convert_to_kg.py  data_sources.md  generate_qa.py  pykeen.md  repo_notes.md  train_kg.sh
kg-linkedin-research/gsr_training/: NOTES.md  build_tokenizer.py  eval.py  prepare_data.py  run_pipeline.sh  smoke_test.py  train.py
kg-linkedin-research/kg_sample/: entities.dict  relations.dict  test.tsv  train.tsv  valid.tsv
onet-falkor-playground/: README.md  notes.md  start.sh
onet-falkor-playground/backend/: main.py  pyproject.toml
onet-falkor-playground/frontend/: package-lock.json  package.json
onet-falkor-playground/frontend/app/: globals.css  layout.tsx  page.tsx
onet-falkor-playground/frontend/components/: OccupationSearch.tsx  TransitionView.tsx
onet-falkor-playground/loader/: load_onet.py  pyproject.toml
onet-falkor-playground/scratch/: compare_approaches.py  test_cypher_fallback.py  test_cypher_optimized.py  test_sisters.py  test_transition_math.py
pipeline/: 01_outer_loop.py  02_query.py  03_browser_queries.md  NOTES.md  cfpb_retriever.pkl  pyproject.toml
qwen-playground/: 01_ollama_basics.py  NOTES.md  pyproject.toml
ray-playground/: 01_ray_basics.py  02_ray_actors.py  03_ovir_ray_pipeline.py  NOTES.md  pyproject.toml
scripts/: fetch_cfpb_corpus.py
solr-nn-playground/: 01_vector_index.py  NOTES.md  docker-compose.yml  pyproject.toml
solr-playground/: 01_schema_and_index.py  02_search.py  03_updates_and_management.py  NOTES.md  docker-compose.yml  pyproject.toml
src/ovir/: __init__.py
src/ovir/eval/: synthesize.py
src/ovir/offline/: pipeline.py
src/ovir/runtime/: query.py
