[project]
name = "cobweb-playground"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cobweb-language-embedding @ git+https://github.com/Teachable-AI-Lab/cobweb-language-embedding.git",
    "concept-formation>=0.3.9",
    "requests>=2.32.0",
    "numpy>=1.24.0",
]
# Embeddings via Ollama nomic-embed-text — no sentence-transformers needed.
# cobweb-language-embedding provides CobwebRetriever; we supply our own embeddings.
